# xtreme-fastapi-template

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  secretkey_gen.py
app/: auth_service.py  deps.py  env_reader.py  gvs.py  logger.py  logs_config.py  settings.py  state.py  types.py  utils.py
app/db/: __init__.py  admin_settings.py  user.py
app/middlewares/: standard_response.py
db_handles/: __init__.py  admin_settings.py  base.py  session.py  settings.py  tables.py  trigger_queries.py  user.py
middlewares/: standard_response.py
models/: admin.py  admin_settings.py  app_settings.py  auth.py  payment.py  user.py
redis_handlers/: client.py  consumer.py  dispatcher.py  payloads.py  streams.py
routes/: admin_routes.py  app_endpoints.py  auth_routes.py  file_routes.py  payment_routes.py  root_route.py  user_routes.py
